--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "murich/php-cryptocurrency-address-validation",
+    "name": "Merkeleon/php-cryptocurrency-address-validation",
     "description": "Cryptocurrency address validation. Currently supports litecoin and bitcoin.",
     "authors": [
         {
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Murich\\PhpCryptocurrencyAddressValidation\\": "src"
+            "Merkeleon\\PhpCryptocurrencyAddressValidation\\": "src"
         }
     }
 }
