--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         }
     ],
     "require": {
-        "spomky-labs/cbor-php": "^2.0"
+        "php": "^8.2",
+        "ext-gmp": "*",
+        "ext-bcmath": "*",
+        "laravel/framework": ">=v7.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.0"
