--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "php": "^8.2",
         "ext-gmp": "*",
         "ext-bcmath": "*",
-        "laravel/framework": ">=v7.0.0",
-        "spomky-labs/cbor-php": "2.0.0"
+        "laravel/framework": ">=v7.0.0|>=v10.0.0",
+        "spomky-labs/cbor-php": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.0"
