--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: shivammathur/setup-php@master
+        with:
+          php-version: '8.2'
+
       - name: Cache Composer packages
         id: composer-cache
         uses: actions/cache@v3
